force-app/main/default/objects/Booking_Session__c/Booking_Session__c.object-meta.xml
<CustomObject>
    <description>Lightweight rebooking context for returning patients (links only, minimal PHI).</description>
    <label>Booking Session</label>
    <nameField>
        <displayFormat>BS-{00000}</displayFormat>
        <label>Booking Session Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Booking Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>