force-app/main/default/objects/Booking_Session__c/fields/Context_Token__c.field-meta.xml
<CustomField>
    <fullName>Context_Token__c</fullName>
    <description>Opaque token for anonymous web resume; do not store diagnoses or clinical notes.</description>
    <externalId>true</externalId>
    <label>Context Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>