force-app/main/default/objects/Booking_Session__c/fields/Last_Clinical_Encounter__c.field-meta.xml
<CustomField>
    <fullName>Last_Clinical_Encounter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Optional link to last clinical encounter.</description>
    <label>Last Clinical Encounter</label>
    <referenceTo>ClinicalEncounter</referenceTo>
    <relationshipLabel>Booking Sessions</relationshipLabel>
    <relationshipName>Booking_Sessions_From_Encounter</relationshipName>
    <type>Lookup</type>
</CustomField>