force-app/main/default/objects/Booking_Session__c/fields/Last_Service_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Last_Service_Appointment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Most recent appointment for prefill.</description>
    <label>Last Service Appointment</label>
    <referenceTo>ServiceAppointment</referenceTo>
    <relationshipLabel>Booking Sessions (Last Appt)</relationshipLabel>
    <relationshipName>Booking_Sessions_From_SA</relationshipName>
    <type>Lookup</type>
</CustomField>