force-app/main/default/objects/Booking_Session__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Returning patient for rebooking context.</description>
    <label>Patient</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Booking Sessions</relationshipLabel>
    <relationshipName>Booking_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>