force-app/main/default/objects/Booking_Session__c/fields/Preferred_Facility__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Facility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Default facility for next booking.</description>
    <label>Preferred Facility</label>
    <referenceTo>HealthcareFacility</referenceTo>
    <relationshipLabel>Booking Sessions</relationshipLabel>
    <relationshipName>Booking_Sessions_From_Facility</relationshipName>
    <type>Lookup</type>
</CustomField>